[package]
name = "meecc"
version = "0.1.0"
authors = ["tomvanwoow <tom@vanhowe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
bitflags = "1.2.1"
colored = "2.0.0"
itertools = "0.9.0"
f128 = "0.2.6"
